--- a/css/favorite.css
+++ b/css/favorite.css
@@ -2,7 +2,7 @@
 
 .picture-background{
     
-    background-image:linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url(../img/body-img/body1.jpg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.8)),url(../img/favorite/favorite.jpg);
     background-position: center;
     background-size: cover;
 }
@@ -10,12 +10,12 @@
 
 
 .main-home-nav{
-   background-color: rgba(0, 188, 212, 0.5);
+   background-color: rgba(213, 0, 0, 0.5);
 }
 
 .main-home-nav:after,
 .main-home-nav:before{
-    background-color: rgba(0, 188, 212, 0.5);
+    background-color: rgba(213, 0, 0, 0.5);
 }
 
    
