--- a/css/africa.css
+++ b/css/africa.css
@@ -1,6 +1,6 @@
 
 .picture-background{
-background-image:linear-gradient(rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.8)),url("../img/africa/africa.jpg");
+background-image:linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url("../img/africa/africa2.jpg");
 background-position:center;
 background-size:cover;
 }
