--- a/css/animal.css
+++ b/css/animal.css
@@ -1,6 +1,6 @@
 
 .picture-background{
-background-image:linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url("../img/animals-img/animal.jpeg");
+background-image:linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url("../img/fact-img/animal.jpeg");
 background-position:center;
 background-size:cover;
 }
