--- a/css/body.css
+++ b/css/body.css
@@ -2,7 +2,7 @@
 
 .picture-background{
     
-    background-image:linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url(../img/body-img/body1.jpg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url(../img/fact-img/body1.jpg);
     background-position: center;
     background-size: cover;
 }
