--- a/css/shared.css
+++ b/css/shared.css
@@ -92,7 +92,8 @@ span{
 
 
 /* Menu-button*/
-.fa-bars{
+.fa-bars,
+.fa-microphone{
     color: white;
     font-size: 110%;
     
@@ -208,19 +209,3 @@ span{
     top: 2px;
     left: 6px;
 }
-
-.microphone-box{
-    widows: 50px;
-    height: 50px;
-}
-
-.microphone-read-text{
-    position: absolute;
-    bottom: 10%;
-    right: 10%;
-    width: inherit;
-    height: inherit;
-    
-}
-
- 
