--- a/css/science.css
+++ b/css/science.css
@@ -1,6 +1,6 @@
 
 .picture-background{
-background-image:linear-gradient(rgba(0, 0, 0, 0.65),rgba(0, 0, 0, 0.65)),url("../img/fact-img/science5.jpeg");
+background-image:linear-gradient(rgba(0, 0, 0, 0.65),rgba(0, 0, 0, 0.65)),url("../img/fact-img/science.jpeg");
 background-position:center;
 background-size:cover;
 }
